syntax = "proto3";

package scp.api.v1;

option java_outer_classname = "OutlierProto";
option java_multiple_files = true;
option java_package = "io.scp.api.v1";
option go_package = "ericsson.com/5g/scp/api/v1/outlier";

import "envoy/data/cluster/v3/outlier_detection_event.proto";

import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.stable_marshaler_all) = true;

message OutlierLogEvent {
  // The ID of the Envoy pod, consisting of the string "envoy-" followed by
  // the last part after the dash of the Kubernetes pod name of the SCP worker.
  // Example: the name of the SCP worker is "eric-scp-worker-c4c6f8f8f-8f4f6",
  // then the envoy_id is "envoy-8f4f6".
  string envoy_id = 1;

  // The outlier log event as it is/would be logged by Envoy in the log file.
  envoy.data.cluster.v3.OutlierDetectionEvent event_details = 2;
}

// Empty response, the outlier-log-forwarder doesn't need any information from
// the manager.
message OutlierLogEventResponse {
}

